Resolved issue with the image resizing when page is resized. Currently working on offsetting the secondary project + tabling overlapping div containers for the meantime

--- a/src/components/Featured/Featured.css
+++ b/src/components/Featured/Featured.css
@@ -21,6 +21,7 @@
     justify-content: space-around;
     width: 75vw;
     height: 175vh;
+    min-height: 1590px;
     background-color: green;
 }
 
@@ -39,11 +40,10 @@
     justify-content: center;
     align-items: center;
     grid-column: 1 / 3;
-    max-height: 100%;
 }
 
 .projectImage {
-    height: 100%;
+    height: auto;
     max-width: 100%;
     cursor: pointer;
 }
@@ -54,7 +54,7 @@
     text-align: right;
     background-color: yellow;
     height: 25vh;
-    width: 35vw;
+    width: 40vw;
     grid-column: 2 / -1;
     justify-self: right;
     align-self: center;
@@ -101,4 +101,11 @@
     flex-direction: row;
     justify-content: left;
     background-color: red;
+}
+
+@media screen and (min-width: 1600px) {
+    .projectImageCont {
+        max-width: 800px;
+        max-height: 400px;
+    }
 }
