--- a/src/components/Other/Other.css
+++ b/src/components/Other/Other.css
@@ -6,6 +6,7 @@
     flex-direction: column;
     position: relative;
     background: rebeccapurple;
+    margin-top: 100px;
     width: 85vw;
     height: 100vh;
 }
