--- a/src/components/Social/Social.css
+++ b/src/components/Social/Social.css
@@ -20,7 +20,7 @@
 .socials {
     display: flex;
     flex-direction: column;
-    font-size: 2.25em;
+    font-size: 1.1em;
 }
 
 .socials a {
